--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <div class="card mt-3 shadow">
         <div class="card-body">
             <h5 class="card-title">B&uacute;squeda</h5>
-            <form class="form-inline">
+            <form class="form-inline" action="/search" method="POST">
                 <div class="form-group mr-2">
                     <input type="text" class="form-control" id="search-input" name="hashtag" placeholder="Hashtag" />
                 </div>
